fixed whitespace before "mensajes" in forum css

--- a/style/index.css
+++ b/style/index.css
@@ -92,6 +92,7 @@
 
 .message-count::after {
   content: " mensajes";
+  white-space: pre;
 }
 
 .name::before{
